fix mobile view  product container overlapping order confirmation page trancking ui added and fix order date

--- a/css/order-confirmation.css
+++ b/css/order-confirmation.css
@@ -48,7 +48,7 @@ th, td {
   font-weight: bold;
   color: #FFA500;
 }
-#printButton {
+#checkStatusBtn {
   display: block;
   margin: 20px auto;
   background-color: #FFA500;
@@ -58,7 +58,7 @@ th, td {
   border-radius: 5px;
   cursor: pointer;
 }
-#printButton:hover {
+#checkStatusBtn:hover {
   background-color: #FFD700;
 }
 
@@ -71,9 +71,153 @@ th, td {
 }
 
 
-
 .message {
   font-size: 23px;
   color: #333;
 }
 
+
+/* Track order Css */
+
+#progressbar {
+  margin-bottom: 3vh;
+  overflow: hidden;
+  color: rgb(252, 103, 49);
+  padding-left: 0px;
+  margin-top: 3vh
+}
+
+#progressbar li {
+  list-style-type: none;
+  font-size: x-small;
+  width: 25%;
+  float: left;
+  position: relative;
+  font-weight: 400;
+  color: rgb(160, 159, 159);
+}
+
+#progressbar #step1:before {
+  content: "";
+  color: rgb(252, 103, 49);
+  width: 5px;
+  height: 5px;
+  margin-left: 0px !important;
+  /* padding-left: 11px !important */
+}
+
+#progressbar #step2:before {
+  content: "";
+  color: #fff;
+  width: 5px;
+  height: 5px;
+  margin-left: 32%;
+}
+
+#progressbar #step3:before {
+  content: "";
+  color: #fff;
+  width: 5px;
+  height: 5px;
+  margin-right: 32% ; 
+  /* padding-right: 11px !important */
+}
+
+#progressbar #step4:before {
+  content: "";
+  color: #fff;
+  width: 5px;
+  height: 5px;
+  margin-right: 0px !important;
+  /* padding-right: 11px !important */
+}
+
+
+#progressbar li:before {
+  line-height: 29px;
+  display: block;
+  font-size: 12px;
+  background: #ddd;
+  border-radius: 50%;
+  margin: auto;
+  z-index: -1;
+  margin-bottom: 1vh;
+}
+
+#progressbar li:after {
+  content: '';
+  height: 2px;
+  background: #ddd;
+  position: absolute;
+  left: 0%;
+  right: 0%;
+  margin-bottom: 2vh;
+  top: 1px;
+  z-index: 1;
+  
+}
+.progress-track{
+  padding: 0 8%;
+}
+
+#step3,#step4{
+  text-align: right;
+}
+
+#progressbar li:nth-child(2):after {
+  margin-right: auto;
+}
+
+#progressbar li:nth-child(1):after {
+  margin: auto;
+}
+
+#progressbar li:nth-child(3):after {
+  float: left;
+  width: 68%;
+}
+#progressbar li:nth-child(4):after {
+  margin-left: auto;
+  width: 132%;
+}
+
+#progressbar  li.active{
+  color: black;
+}
+
+#progressbar li.active:before,
+#progressbar li.active:after {
+  background: rgb(252, 103, 49);
+}
+.title{
+  color: rgb(252, 103, 49);
+  font-weight: 600;
+  margin-bottom: 2vh;
+  padding: 0 8%;
+  font-size: initial;
+}
+
+.order-status{
+  display: none;
+}
+
+.footer{
+  padding: 0 8%;
+  font-size: x-small;
+  color: black;
+}
+.footer img{
+  height: 8vh;
+  opacity: 0.9;
+}
+.footer a{
+  color: rgb(252, 103, 49);
+}
+.footer .col-10, .col-2{
+  display: flex;
+  padding: 3vh 0 0;
+  align-items: center;
+}
+.footer .row{
+  margin: 0;
+}
